<resources>
    <string name="app_name">Juego_Disparos</string>

    <string name="BTNLOGIN">LOGIN</string>
    <string name="BTNREGISTRO">REGISTRO</string>

    <string name="CorreoElectronico">Correo Electronico</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Nombre">Nombre Usuario</string>
    <string name="Registrar">Registrar</string>

    <string name="CorreoLogin">Correo Electronico</string>
    <string name="ContrasenaLogin">Contrasena</string>
    <string name="BtnLogin">Ingreso</string>

    <string name="Mipuntunaciontxt">Mi Puntuación</string>
    <string name="Zombies">  </string>
    <string name="uid">  </string>
    <string name="correo">  </string>
    <string name="nombre"> </string>

    <string name="Menutxt">Menú</string>

    <string name="BtnJugar">Jugar</string>
    <string name="BtnPuntuaciones">Puntuaciones</string>
    <string name="BtnAcercaDe">Acerca De Nosotros</string>

    <string name="BtnCerrar">Cerrar Sesión</string>

    <string name="Desarroladotxt">Desarollado por</string>
    <string name="Devtxt">Nombre</string>
    <string name="Ok">Ok</string>


    <string name="TvContador"> 0 </string>
    <string name="TvNombre"> --- </string>
    <string name="TvTiempo"> 0s </string>

    <string name="TvAncho"> -- </string>
    <string name="TvAlto"> -- </string>

    <string name="SeAcabotxt"> Se acabó el tiempo </string>
    <string name="Hasmatadotxt"> Has Matado </string>
    <string name="Numerotxt"> -- </string>
    <string name="Reintentar"> Reintentar </string>
    <string name="IrMenu"> Menú </string>
    <string name="Puntajes"> Ver Puntaje </string>


    <string name="NombreJugador">Nombre</string>
    <string name="CorreoJugador">Correo</string>
    <string name="PuntajeJugador">Puntaje</string>



</resources>