<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!--Puntuacion-->
        <TextView
            android:id="@+id/Mipuntuaciontxt"
            android:text="@string/Mipuntunaciontxt"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <!--Zombies-->

        <TextView
            android:id="@+id/Zombies"
            android:text="@string/Zombies"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <!--Imagen-->

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/menu"
            android:src="@drawable/menu"
            android:layout_width="150dp"
            android:layout_height="150dp">

        </androidx.appcompat.widget.AppCompatImageView>

        <!--uid-->

        <TextView
            android:id="@+id/uid"
            android:text="@string/uid"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <!--correo-->

        <TextView
            android:id="@+id/correo"
            android:text="@string/correo"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <!--nombre-->

        <TextView
            android:id="@+id/nombre"
            android:text="@string/nombre"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <!--Menú-->

        <TextView
            android:id="@+id/Menutxt"
            android:text="@string/Menutxt"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <!--Boton Jugar -->
        <Button
            android:id="@+id/BtnJugar"
            android:layout_margin="10dp"
            android:background="@drawable/botonpersonalizado"
            android:text="@string/BtnJugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/BtnPuntuaciones"
            android:layout_margin="10dp"
            android:text="@string/BtnPuntuaciones"
            android:background="@drawable/botonpersonalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/BtnAcercaDe"
            android:layout_margin="10dp"
            android:text="@string/BtnAcercaDe"
            android:background="@drawable/botonpersonalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/BtnCerrar"
            android:layout_margin="10dp"
            android:text="@string/BtnCerrar"
            android:background="@drawable/botonpersonalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>




    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>