<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/CorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CorreoElectronico" />

        <EditText
            android:id="@+id/Contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contrasena" />

        <EditText
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"/>

        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrar" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>

