<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Escenario">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Info  -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/glock">


            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/TvContador"
                android:layout_width="60dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/TvContador"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/TvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/TvNombre"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            <!--ANIMACIÓN-->
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="tiempo.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/TvTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/TvTiempo"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Zombie-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IvZombie"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/zombienormal">

            </androidx.appcompat.widget.AppCompatImageView>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>